# mortgage-comparison

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
backend/: pyproject.toml
backend/src/: main.py  server.py
backend/src/backend/: main.py  server.py
backend/tests/: test_mortgage.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: AverageResultsVisualizer.tsx  EuroInput.tsx  PercentageInput.tsx
infra/: samconfig.toml  template.yaml
