[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Enrique Alejo",email = "easox23@gmail.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastapi (>=0.115.9,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "numpy-financial (>=1.0.0,<2.0.0)",
    "mangum (>=0.19.0,<0.20.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-plugin-lambda-build]
layer-artifact-path = "artifacts/layer.zip"
layer-install-dir = "python"
function-artifact-path = "artifacts/function.zip"
[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pytest = "^8.3.5"
